<resources>
    <string name="app_name">MacrosTracker</string>
    <string name="cd_user">User</string>
    <string name="title_user">User</string>
    <string name="create_food_title">Create Food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userPageTitle">User</string>
    <string name="user_data">User data</string>
    <string name="profile">Profile</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="sexLabel">Sex</string>
    <string name="select_sex">Select sex</string>
    <string name="results">Results</string>
    <string name="bmr">BMR</string>
    <string name="imc">IMC</string>
    <string name="edit_profile_data">Edit profile data</string>
    <string name="weightInputlabel">Weight</string>
    <string name="heightInputlabel">Height</string>
    <string name="ageInputlabel">Age</string>
    <string name="genderInputlabel">Gender</string>
    <string name="weightUnitInputlabel">Weight units</string>
    <string name="heightUnitsInputlabel">Height units</string>
    <string name="userDataSubmitButton">Submit</string>
    <string name="userDataCancelButton">Cancel</string>
    <string name="heightInM">Height(m)</string>
    <string name="heightInFt">Height(ft)</string>
    <string name="weightInKg">Weight(kg)</string>
    <string name="weightInLb">Weight(lb)</string>
    <string name="genderMale">Male</string>
    <string name="genderFemale">Female</string>
    <string name="data_input">Data Input</string>
    <string name="title_diary">Diary</string>
    <string name="cd_diary">Diary Entry</string>
    <string name="activity_level">Activity level</string>
    <string name="objective">Objective</string>
    <string name="sedentary">Sedentary</string>
    <string name="lightly_active">Lightly Active</string>
    <string name="moderately_active">Moderately Active</string>
    <string name="active">Active</string>
    <string name="very_active">Very Active</string>
    <string name="lose_weight">Lose weight</string>
    <string name="maintain_weight">Maintain weight</string>
    <string name="gain_weight">Gain weight</string>
    <string name="move_next_day">Move to the next day</string>
    <string name="food_search_hint">Search for a food</string>
    <string name="food_label">My Foods</string>
    <string name="recipe_label">My Recipes</string>
    <string name="add_food">Add Food</string>
    <string name="carbohydrate">Carbohydrate</string>
    <string name="protein">Protein</string>
    <string name="calories">Calories</string>
    <string name="fat">Fat</string>
    <string name="create_a_food">Create Food</string>
    <string name="scan_a_food">Scan Barcode</string>
    <string name="food_name_label">food name</string>
    <string name="food_serving_label">serving size</string>
    <string name="calories_label">calories</string>
    <string name="fat_label">fat</string>
    <string name="protein_label">protein</string>
    <string name="carbs_label">carbohydrate</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="addFood">Add Food</string>
    <string name="content_description_addFood">Add food button</string>
    <string name="content_description_addEntry">Add Entry Button</string>
    <string name="addEntry">add Entry</string>
    <string name="entry_serving_label">Serving size</string>
    <string name="entry_name_label">Entry name</string>
    <string name="delete_entry">This entry will be permanently deleted.</string>
    <string name="delete">Delete</string>
    <string name="delete_entry_title">Delete entry</string>
    <string name="set_height">Add Height</string>
    <string name="measurement_data_input">Measurement units</string>
    <string name="set_objective">Set Objective</string>
    <string name="set">Set</string>
    <string name="food_name_brand">%1$s (%2$s)</string>
    <string name="brand_label">Brand</string>
    <string name="height_dialog_title">Set Height</string>
    <string name="height_dialog_last_value_m">Last value: %1$s m</string>
    <string name="height_dialog_last_value_ft">Last value: %1$s ft</string>
    <string name="weight_dialog_title">Set Weight</string>
    <string name="weight_dialog_last_value_kg">Last value: %1$s Kg</string>
    <string name="weight_dialog_last_value_lb">Last value: %1$s lbs</string>
    <string name="age_dialog_last_value">Last value: %1$s years</string>
    <string name="age_dialog_title">Set Age</string>
    <string name="gender_dialog_title">Set Gender</string>
    <string name="gender_male_dialog_last_value">Last value: %1$s</string>
    <string name="gender_female_dialog_last_value">Last value: %1$s</string>
    <string name="sedentary_dialog_last_value">Last value: Sedentary (no exercise)</string>
    <string name="lightly_active_dialog_last_value">Last value: Lightly Active (exercise 1–3 times/week)</string>
    <string name="moderately_active_dialog_last_value">Last value: Moderately Active (exercise 3–5 times/week)</string>
    <string name="active_dialog_last_value">Last value: Active (exercise 6–7 times/week)</string>
    <string name="very_active_dialog_last_value">Last value: Very Active (hard exercise 6–7 times/week)</string>
    <string name="activity_level_dialog_title">Set Activity Level</string>
    <string name="objective_dialog_title">Set Objective</string>
    <string name="lose_weight_dialog_last_value">Last value: Lose Weight</string>
    <string name="maintain_weight_dialog_last_value">Last value: Maintain Weight</string>
    <string name="gain_weight_dialog_last_value">Last value: Gain Weight</string>
    <string name="units_dialog_title">Set Measurement Units</string>
    <string name="kilogram_dialog_last_value">Last value: Kilograms</string>
    <string name="pounds_dialog_last_value">Last value: Pounds</string>
    <string name="foot_dialog_last_value">Last value: Foot</string>
    <string name="meter_dialog_last_value">Last value: Meters</string>
    <string name="back_barcode_scanner">Back button</string>
    <string name="flash_barcode_scanner">Activate - deactivate flash</string>
    <string name="scanned_food">Scanned Food</string>
    <string name="formatted_macros_number">%1dg</string>
    <string name="formatted_macros_number_double">%1sg</string>
    <string name="formatted_entry_macros">%1$d calories, %2$sg Protein, %3$sg Fat, %4$sg Carbohydrate</string>
    <string name="formatted_total_macros_summary">%1$sg / %2$sg</string>
    <string name="formatted_total_macros_summary_calories">%1$d / %2$d</string>
    <string name="total_macros_summary_title">Total Macros</string>
    <string name="editMeals">Edit meals</string>
    <string name="content_description_editMeals">Edit Meal list</string>
    <string name="meals_title">Meal list</string>
    <string name="edit_meal_name">Edit meal name</string>
    <string name="userFoodList">Food list</string>
    <string name="userRecipeList">Recipe list</string>
    <string name="deleteFood">delete food</string>
    <string name="content_description_deleteFood">delete food</string>
    <string name="create_a_recipe">Create Recipe</string>
    <string name="recipe_name_label">Recipe name</string>
    <string name="recipe_description_label">Recipe description</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="add_ingredient">add ingredient</string>
    <string name="serving_size_string_resource">Serving size: %1$dg</string>
    <string name="ingredient_quantity">Ingredient Quantity</string>
    <string name="finishIngredients">finish adding ingredients</string>
    <string name="deleteDialogTitle">Delete Ingredient</string>
    <string name="deleteDialogText">Delete the current ingredient?</string>
    <string name="deleteFoodDialogTitle">Delete Food</string>
    <string name="deleteFoodDialogText">Delete the current food?</string>
    <string name="deleteRecipeDialogTitle">Delete Recipe</string>
    <string name="deleteRecipeDialogText">Delete the current recipe?</string>
    <string name="MacrosTitle">Macros</string>
    <string name="TodayString">Today</string>
    <string name="TomorrowString">Tomorrow</string>
    <string name="YesterdayString">Yesterday</string>
</resources>