<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/header_background"
        android:padding="8dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Title"/>

    <!--Calories-->
    <TextView
        android:id="@+id/caloriesSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toTopOf="@id/caloriesSummaryTittle"
        app:layout_constraintEnd_toEndOf="@+id/caloriesSummaryTittle"
        app:layout_constraintStart_toStartOf="@+id/caloriesSummaryTittle"
        tools:text="123" />

    <TextView
        android:id="@+id/caloriesSummaryTittle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/calories"
        app:layout_constraintTop_toBottomOf="@id/caloriesSummary"
        app:layout_constraintEnd_toStartOf="@id/proteinSummaryTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <!--Protein-->
    <TextView
        android:id="@+id/proteinSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="@+id/proteinSummaryTitle"
        app:layout_constraintStart_toStartOf="@+id/proteinSummaryTitle"
        tools:text="123" />

    <TextView
        android:id="@+id/proteinSummaryTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/protein"
        app:layout_constraintTop_toBottomOf="@id/proteinSummary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/caloriesSummaryTittle" />

    <!--Fat-->
    <TextView
        android:id="@+id/fatSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/caloriesSummaryTittle"
        app:layout_constraintEnd_toEndOf="@+id/fatSummaryTitle"
        app:layout_constraintStart_toStartOf="@+id/fatSummaryTitle"
        tools:text="123" />

    <TextView
        android:id="@+id/fatSummaryTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fat"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/fatSummary"
        app:layout_constraintEnd_toStartOf="@id/carbohydrateSummaryTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>-->

    <!--Carbohydrate-->
    <TextView
        android:id="@+id/carbohydrateSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/proteinSummaryTitle"
        app:layout_constraintEnd_toEndOf="@+id/carbohydrateSummaryTitle"
        app:layout_constraintStart_toStartOf="@+id/carbohydrateSummaryTitle"
        tools:text="123" />

    <TextView
        android:id="@+id/carbohydrateSummaryTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/carbohydrate"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/carbohydrateSummary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fatSummaryTitle"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>